--- a/CodeBook.html
+++ b/CodeBook.html
@@ -61,18 +61,393 @@ img {
 
 <div id="header">
 <h1 class="title">CodeBook</h1>
+<h4 class="date"><em>July 2015</em></h4>
 </div>
 
 
-<div id="code-book-for-course-project" class="section level3">
-<h3>Code Book for Course Project</h3>
-<p>This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <a href="http://rmarkdown.rstudio.com" class="uri">http://rmarkdown.rstudio.com</a>.</p>
-<p>When you click the <strong>Knit</strong> button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:</p>
-<pre class="{r}"><code>summary(cars)</code></pre>
-<p>You can also embed plots, for example:</p>
-<p><code>{r, echo=FALSE} plot(cars)</code></p>
-<p>Note that the <code>echo = FALSE</code> parameter was added to the code chunk to prevent printing of the R code that generated the plot.</p>
-<pre class="{r}"><code>getwd()</code></pre>
+<div id="data-dictionary-for-module-3-course-project" class="section level3">
+<h3>Data Dictionary for Module 3 Course Project</h3>
+<ul>
+<li>Data File: result.txt</li>
+<li>Location: Coursera Assignment Page</li>
+<li>Alternate Location : <a href="https://github.com/kakilima/Module3CourseProject/blob/master/result.txt" class="uri">https://github.com/kakilima/Module3CourseProject/blob/master/result.txt</a></li>
+</ul>
+<div id="notes" class="section level5">
+<h5>Notes:</h5>
+<ul>
+<li><p>Features are normalized and bounded within [-1,1]</p></li>
+<li><p>The features selected for this database come from the accelerometer and gyroscope 3-axial raw signals tAcc-XYZ and tGyro-XYZ. These time domain signals (prefix ‘t’ to denote time) were captured at a constant rate of 50 Hz. Then they were filtered using a median filter and a 3rd order low pass Butterworth filter with a corner frequency of 20 Hz to remove noise. Similarly, the acceleration signal was then separated into body and gravity acceleration signals (tBodyAcc-XYZ and tGravityAcc-XYZ) using another low pass Butterworth filter with a corner frequency of 0.3 Hz.</p></li>
+<li><p>Subsequently, the body linear acceleration and angular velocity were derived in time to obtain Jerk signals (tBodyAccJerk-XYZ and tBodyGyroJerk-XYZ). Also the magnitude of these three-dimensional signals were calculated using the Euclidean norm (tBodyAccMag, tGravityAccMag, tBodyAccJerkMag, tBodyGyroMag, tBodyGyroJerkMag).</p></li>
+<li><p>A Fast Fourier Transform (FFT) was applied to some of these signals producing fBodyAcc-XYZ, fBodyAccJerk-XYZ, fBodyGyro-XYZ, fBodyAccJerkMag, fBodyGyroMag, fBodyGyroJerkMag. (Note the ‘f’ to indicate frequency domain signals).</p></li>
+<li>The mean and standard deviation values are taken</li>
+<li><p>Finally, the average/mean for each subject &amp; activity is calculated</p></li>
+</ul>
+</div>
+</div>
+<div id="data-format-description" class="section level3">
+<h3>Data Format &amp; Description</h3>
+<ul>
+<li>subject
+<ul>
+<li>Unique identifier of individual who participated in the experiment (range 1 - 30, identifying 30 different individuals)</li>
+</ul></li>
+<li>activity
+<ul>
+<li>type of activities performed (6 possible variation in dataset)
+<ol style="list-style-type: decimal">
+<li>WALKING</li>
+<li>WALKING_UPSTAIRS</li>
+<li>WALKING_DOWNSTAIRS</li>
+<li>SITTING</li>
+<li>STANDING</li>
+<li>LAYING</li>
+</ol></li>
+</ul></li>
+<li>average of tBodyAcc mean X
+<ul>
+<li>average of Body Acceleration mean X axis (time domain)</li>
+</ul></li>
+<li>average of tBodyAcc mean Y
+<ul>
+<li>average of Body Acceleration mean Y axis (time domain)</li>
+</ul></li>
+<li>average of tBodyAcc mean Z
+<ul>
+<li>average of Body Acceleration mean Z axis (time domain)</li>
+</ul></li>
+<li>average of tBodyAcc std X
+<ul>
+<li>average of Body Acceleration standard deviation X axis (time domain)</li>
+</ul></li>
+<li>average of tBodyAcc std Y
+<ul>
+<li>average of Body Acceleration standard deviation Y axis (time domain)</li>
+</ul></li>
+<li>average of tBodyAcc std Z
+<ul>
+<li>average of Body Acceleration standard deviation Z axis (time domain)</li>
+</ul></li>
+<li>average of tGravityAcc mean X
+<ul>
+<li>average of Gravity Acceleration mean X axis (time domain)</li>
+</ul></li>
+<li>average of tGravityAcc mean Y
+<ul>
+<li>average of Gravity Acceleration mean Y axis (time domain)</li>
+</ul></li>
+<li>average of tGravityAcc mean Z
+<ul>
+<li>average of Gravity Acceleration mean Z axis (time domain)</li>
+</ul></li>
+<li>average of tGravityAcc std X
+<ul>
+<li>average of Gravity Acceleration standard deviation X axis (time domain)</li>
+</ul></li>
+<li>average of tGravityAcc std Y
+<ul>
+<li>average of Gravity Acceleration standard deviation Y axis (time domain)</li>
+</ul></li>
+<li>average of tGravityAcc std Z
+<ul>
+<li>average of Gravity Acceleration standard deviation Z axis (time domain)</li>
+</ul></li>
+<li>average of tBodyAccJerk mean X
+<ul>
+<li>average of Body Acceleration Jerk mean X axis (time domain)</li>
+</ul></li>
+<li>average of tBodyAccJerk mean Y
+<ul>
+<li>average of Body Acceleration Jerk mean Y axis (time domain)</li>
+</ul></li>
+<li>average of tBodyAccJerk mean Z
+<ul>
+<li>average of Body Acceleration Jerk mean Z axis (time domain)</li>
+</ul></li>
+<li>average of tBodyAccJerk std X
+<ul>
+<li>average of Body Acceleration Jerk standard deviation X axis (time domain)</li>
+</ul></li>
+<li>average of tBodyAccJerk std Y
+<ul>
+<li>average of Body Acceleration Jerk standard deviation Y axis (time domain)</li>
+</ul></li>
+<li>average of tBodyAccJerk std Z
+<ul>
+<li>average of Body Acceleration Jerk standard deviation Z axis (time domain)</li>
+</ul></li>
+<li>average of tBodyGyro mean X
+<ul>
+<li>average of Body Gyroscope mean X axis (time domain)</li>
+</ul></li>
+<li>average of tBodyGyro mean Y
+<ul>
+<li>average of Body Gyroscope mean Y axis (time domain)</li>
+</ul></li>
+<li>average of tBodyGyro mean Z
+<ul>
+<li>average of Body Gyroscope mean Z axis (time domain)</li>
+</ul></li>
+<li>average of tBodyGyro std X
+<ul>
+<li>average of Body Gyroscope standard deviation X axis (time domain)</li>
+</ul></li>
+<li>average of tBodyGyro std Y
+<ul>
+<li>average of Body Gyroscope standard deviation Y axis (time domain)</li>
+</ul></li>
+<li>average of tBodyGyro std Z
+<ul>
+<li>average of Body Gyroscope standard deviation Z axis (time domain)</li>
+</ul></li>
+<li>average of tBodyGyroJerk mean X
+<ul>
+<li>average of Body Gyroscope Jerk mean X axis (time domain)</li>
+</ul></li>
+<li>average of tBodyGyroJerk mean Y
+<ul>
+<li>average of Body Gyroscope Jerk mean Y axis (time domain)</li>
+</ul></li>
+<li>average of tBodyGyroJerk mean Z
+<ul>
+<li>average of Body Gyroscope Jerk mean Z axis (time domain)</li>
+</ul></li>
+<li>average of tBodyGyroJerk std X
+<ul>
+<li>average of Body Gyroscope Jerk standard deviation X axis (time domain)</li>
+</ul></li>
+<li>average of tBodyGyroJerk std Y
+<ul>
+<li>average of Body Gyroscope Jerk standard deviation Y axis (time domain)</li>
+</ul></li>
+<li>average of tBodyGyroJerk std Z
+<ul>
+<li>average of Body Gyroscope Jerk standard deviation Z axis (time domain)</li>
+</ul></li>
+<li>average of tBodyAccMag mean
+<ul>
+<li>average of Body Acceleration standard deviation (time domain)</li>
+</ul></li>
+<li>average of tBodyAccMag std
+<ul>
+<li>average of Body Acceleration mean (time domain)</li>
+</ul></li>
+<li>average of tGravityAccMag mean
+<ul>
+<li>average of Gravity Acceleration mean (time domain)</li>
+</ul></li>
+<li>average of tGravityAccMag std
+<ul>
+<li>average of Gravity Acceleration standard deviation (time domain)</li>
+</ul></li>
+<li>average of tBodyAccJerkMag mean
+<ul>
+<li>average of Body Acceleration Jerk mean (time domain)</li>
+</ul></li>
+<li>average of tBodyAccJerkMag std
+<ul>
+<li>average of Body Acceleration Jerk standard deviation (time domain)</li>
+</ul></li>
+<li>average of tBodyGyroMag mean
+<ul>
+<li>average of Body Gyroscope Magnitude mean (time domain)</li>
+</ul></li>
+<li>average of tBodyGyroMag std
+<ul>
+<li>average of Body Gyroscope Magnitude standard deviation (time domain)</li>
+</ul></li>
+<li>average of tBodyGyroJerkMag mean
+<ul>
+<li>average of Body Gyroscope Jerk mean (time domain)</li>
+</ul></li>
+<li>average of tBodyGyroJerkMag std
+<ul>
+<li>average of Body Gyroscope Jerk standard deviation (time domain)</li>
+</ul></li>
+<li>average of fBodyAcc mean X
+<ul>
+<li>average of Body Acceleration mean x axis (frequency domain)</li>
+</ul></li>
+<li>average of fBodyAcc mean Y
+<ul>
+<li>average of Body Acceleration mean Y axis (frequency domain)</li>
+</ul></li>
+<li>average of fBodyAcc mean Z
+<ul>
+<li>average of Body Acceleration mean Z axis (frequency domain)</li>
+</ul></li>
+<li>average of fBodyAcc std X
+<ul>
+<li>average of Body Acceleration standard deviation X axis (frequency domain)</li>
+</ul></li>
+<li>average of fBodyAcc std Y
+<ul>
+<li>average of Body Acceleration standard deviation Y axis (frequency domain)</li>
+</ul></li>
+<li>average of fBodyAcc std Z
+<ul>
+<li>average of Body Acceleration standard deviation Z axis (frequency domain)</li>
+</ul></li>
+<li>average of fBodyAcc meanFreq X
+<ul>
+<li>average of Body Acceleration mean frequency X axis (frequency domain)</li>
+</ul></li>
+<li>average of fBodyAcc meanFreq Y
+<ul>
+<li>average of Body Acceleration mean frequency Y axis (frequency domain)</li>
+</ul></li>
+<li>average of fBodyAcc meanFreq Z
+<ul>
+<li>average of Body Acceleration mean frequency Z axis (frequency domain)</li>
+</ul></li>
+<li>average of fBodyAccJerk mean X
+<ul>
+<li>average of Body Acceleration Jerk mean X axis (frequency domain)</li>
+</ul></li>
+<li>average of fBodyAccJerk mean Y
+<ul>
+<li>average of Body Acceleration Jerk mean Y axis (frequency domain)</li>
+</ul></li>
+<li>average of fBodyAccJerk mean Z
+<ul>
+<li>average of Body Acceleration Jerk mean Z axis (frequency domain)</li>
+</ul></li>
+<li>average of fBodyAccJerk std X
+<ul>
+<li>average of Body Acceleration Jerk standard deviation X axis (frequency domain)</li>
+</ul></li>
+<li>average of fBodyAccJerk std Y
+<ul>
+<li>average of Body Acceleration Jerk standard deviation Y axis (frequency domain)</li>
+</ul></li>
+<li>average of fBodyAccJerk std Z
+<ul>
+<li>average of Body Acceleration Jerk standard deviation Z axis (frequency domain)</li>
+</ul></li>
+<li>average of fBodyAccJerk meanFreq X
+<ul>
+<li>average of Body Acceleration Jerk mean frequency X axis (frequency domain)</li>
+</ul></li>
+<li>average of fBodyAccJerk meanFreq Y
+<ul>
+<li>average of Body Acceleration Jerk mean frequency Y axis (frequency domain)</li>
+</ul></li>
+<li>average of fBodyAccJerk meanFreq Z
+<ul>
+<li>average of Body Acceleration Jerk mean frequency Z axis (frequency domain)</li>
+</ul></li>
+<li>average of fBodyGyro mean X
+<ul>
+<li>average of Body Gyroscorpe mean X axis (frequency domain)</li>
+</ul></li>
+<li>average of fBodyGyro mean Y
+<ul>
+<li>average of Body Gyroscorpe mean Y axis (frequency domain)</li>
+</ul></li>
+<li>average of fBodyGyro mean Z
+<ul>
+<li>average of Body Gyroscorpe mean Z axis (frequency domain)</li>
+</ul></li>
+<li>average of fBodyGyro std X
+<ul>
+<li>average of Body Gyroscorpe standard deviation X axis (frequency domain)</li>
+</ul></li>
+<li>average of fBodyGyro std Y
+<ul>
+<li>average of Body Gyroscorpe standard deviation Y axis (frequency domain)</li>
+</ul></li>
+<li>average of fBodyGyro std Z
+<ul>
+<li>average of Body Gyroscorpe standard deviation Z axis (frequency domain)</li>
+</ul></li>
+<li>average of fBodyGyro meanFreq X
+<ul>
+<li>average of Body Gyroscorpe mean frequency X axis (frequency domain)</li>
+</ul></li>
+<li>average of fBodyGyro meanFreq Y
+<ul>
+<li>average of Body Gyroscorpe mean frequency Y axis (frequency domain)</li>
+</ul></li>
+<li>average of fBodyGyro meanFreq Z
+<ul>
+<li>average of Body Gyroscorpe mean frequency Z axis (frequency domain)</li>
+</ul></li>
+<li>average of fBodyAccMag mean
+<ul>
+<li>average of Body Acceleration mean (frequency domain)</li>
+</ul></li>
+<li>average of fBodyAccMag std
+<ul>
+<li>average of Body Acceleration standard deviation (frequency domain)</li>
+</ul></li>
+<li>average of fBodyAccMag meanFreq
+<ul>
+<li>average of Body Acceleration mean frequency (frequency domain)</li>
+</ul></li>
+<li>average of fBodyBodyAccJerkMag mean
+<ul>
+<li>average of Body Acceleration Jerk Magnitude mean (frequency domain)</li>
+</ul></li>
+<li>average of fBodyBodyAccJerkMag std
+<ul>
+<li>average of Body Acceleration Jerk Magnitude standard deviation (frequency domain)</li>
+</ul></li>
+<li>average of fBodyBodyAccJerkMag meanFreq
+<ul>
+<li>average of Body Acceleration Jerk Magnitude mean frequency (frequency domain)</li>
+</ul></li>
+<li>average of fBodyBodyGyroMag mean
+<ul>
+<li>average of Body Gyroscope Magnitude mean (frequency domain)</li>
+</ul></li>
+<li>average of fBodyBodyGyroMag std
+<ul>
+<li>average of Body Gyroscope Magnitude standard deviation (frequency domain)</li>
+</ul></li>
+<li>average of fBodyBodyGyroMag meanFreq
+<ul>
+<li>average of Body Gyroscope Magnitude mean frequency (frequency domain)</li>
+</ul></li>
+<li>average of fBodyBodyGyroJerkMag mean
+<ul>
+<li>average of Body Gyroscope Jerk Magnitude mean (frequency domain)</li>
+</ul></li>
+<li>average of fBodyBodyGyroJerkMag std
+<ul>
+<li>average of Body Gyroscope Jerk Magnitude standard deviation (frequency domain)</li>
+</ul></li>
+<li>average of fBodyBodyGyroJerkMag meanFreq
+<ul>
+<li>average of Body Gyroscope Jerk Magnitude mean frequency (frequency domain)</li>
+</ul></li>
+<li>average of angle tBodyAccMean gravity
+<ul>
+<li>average of angle of Body Acceleration mean (frequency domain)</li>
+</ul></li>
+<li>average of angle tBodyAccJerkMean gravityMean
+<ul>
+<li>average of angle of Body Acceleration Jerk mean (frequency domain)</li>
+</ul></li>
+<li>average of angle tBodyGyroMean gravityMean
+<ul>
+<li>average of angle of Body Gyroscope mean (frequency domain)</li>
+</ul></li>
+<li>average of angle tBodyGyroJerkMean gravityMean
+<ul>
+<li>average of angle of Body Gyroscope Jerk mean (frequency domain)</li>
+</ul></li>
+<li>average of angle X gravityMean
+<ul>
+<li>average of angle of Gravity mean X axis (frequency domain)</li>
+</ul></li>
+<li>average of angle Y gravityMean
+<ul>
+<li>average of angle of Gravity mean Y axis (frequency domain)</li>
+</ul></li>
+<li>average of angle Z gravityMean
+<ul>
+<li>average of angle of Gravity mean Z axis (frequency domain)</li>
+</ul></li>
+</ul>
 </div>
 
 
