Updated Readme & Codebook files

--- a/README.html
+++ b/README.html
@@ -102,7 +102,8 @@ img {
 <h4>Guide to create the tidy data file</h4>
 <ol style="list-style-type: decimal">
 <li>Download the source data zip file using the link provided.</li>
-<li>Unzip this file into the working directory, maintaining the original folder stucture.</li>
+<li>Unzip this file into a temporary directory, maintaining the original folder stucture.</li>
+<li>Copy the 8 files listed above into the working directory, still maintaining the original folder structure.</li>
 <li>Ensure run_analysis.R file is in this working directory. You may need to copy this file into this directory if necessary.</li>
 <li>run_analysis.R is seperated into few sections. Run all sections.</li>
 <li>The resulting dataset will be exported into result.txt</li>
